change branch name

--- a/letterRecognition/preprocess+model_predict.ipynb
+++ b/letterRecognition/preprocess+model_predict.ipynb
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
     "cv2.putText(img, \"Image Data\", (100,25), cv2.FONT_HERSHEY_DUPLEX , fontScale= 1, thickness=2, color = (255,0,0))\n",
     "cv2.putText(img, \"Character Prediction: \" + img_pred, (10,410), cv2.FONT_HERSHEY_SIMPLEX, fontScale= 1, thickness=2, color = (0,0,255))\n",
     "cv2.imshow('Character Recognition', img)\n",
-    "\n",
+    "#loop\n",
     "while (1):\n",
     "    k = cv2.waitKey(1) & 0xFF\n",
     "    if k == 27:\n",
